[project]
name = "yt-transcipter-multilingual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "youtube-transcript-api>=1.0.3",
]

[project.scripts]
yt-transcipter-multilingual = "main:main"
